[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Jickx <valentin.sharonov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.1.0"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
